# tag_posts_parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tpp/: __init__.py  __main__.py  tag_post_parser.py
tests/: test_tpp.py
