[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tpp"
authors = [
    {name = "Yapeng Lang", email = "Yapeng.Lang@anu.edu.au"},
    ]
keywords = ["biology teaching"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = ["piazza_api"]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: teaching",
        "License :: OSI Approved :: BSD License",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]

dynamic = ["version", "description"]

[tool.flit.sdist]
include = ["src/*", "pyproject.toml"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "black",
    "click",
    "docformatter",
    "flit",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
